Twitter bot: Build Discord embed ourselves
Discord just stopped generating them entirely for RTs, and it seems TwitFix trims the contents so... oh well.